--- a/_news/index.html
+++ b/_news/index.html
@@ -4,14 +4,11 @@ title: News
 permalink: /news/
 ---
 
-<h1 style="text-align: center;">News</h1>
-
-<div class="news-list">
-  <ul>
-    {% for item in site.news %}
-      <li>
-        <a href="{{ item.url }}">{{ item.title }}</a> - {{ item.date | date: "%B %d, %Y" }}
-      </li>
-    {% endfor %}
-  </ul>
-</div>
+<h1>News</h1>
+<ul>
+  {% for item in site.news %}
+    <li>
+      <a href="{{ item.url }}">{{ item.title }}</a> - {{ item.date | date: "%B %d, %Y" }}
+    </li>
+  {% endfor %}
+</ul>
