--- a/_news/index.html
+++ b/_news/index.html
@@ -6,11 +6,13 @@ permalink: /news/
 
 <h1 style="text-align: center;">News</h1>
 
-<div class="news-links">
-  <ul>
+<div style="text-align: center; margin: 0 auto; max-width: 600px;">
+  <ul style="list-style: none; padding: 0; display: inline-block; text-align: left;">
     {% for item in site.news %}
-      <li>
-        <a href="{{ item.url }}">{{ item.title }}</a> - {{ item.date | date: "%B %d, %Y" }}
+      <li style="margin-bottom: 10px;">
+        <a href="{{ item.url }}" style="font-size: 1.2em; text-decoration: none; color: #007bff; display: inline-block;">
+          {{ item.title }}
+        </a> - {{ item.date | date: "%B %d, %Y" }}
       </li>
     {% endfor %}
   </ul>
