--- a/_news/index.html
+++ b/_news/index.html
@@ -8,6 +8,7 @@ permalink: /news/
 
 <div style="text-align: center; margin: 0 auto; max-width: 600px;">
   <ul style="list-style: none; padding: 0; display: inline-block; text-align: left;">
+    {% assign sorted_news = site.news | sort: "date" | reverse %}
     {% for item in site.news %}
       <li style="margin-bottom: 10px;">
         <a href="{{ item.url }}" style="font-size: 1.2em; text-decoration: none; color: #007bff; display: inline-block;">
