--- a/_news/index.html
+++ b/_news/index.html
@@ -9,8 +9,11 @@ permalink: /news/
 <div style="text-align: center; margin: 0 auto; max-width: 600px;">
   <ul style="list-style: none; padding: 0; display: inline-block; text-align: left;">
     {% assign sorted_news = site.news | sort: "date" | reverse %}
-    {% for item in site.news %}
-      <li style="margin-bottom: 10px;">
+    {% for item in sorted_news %}
+      <li style="margin-bottom: 20px; display: flex; align-items: center;">
+        {% if item.image %}
+          <img src="{{ item.image | relative_url }}" alt="{{ item.title }}" style="width: 80px; height: auto; margin-right: 15px; border-radius: 5px;">
+        {% endif %}
         <a href="{{ item.url }}" style="font-size: 1.2em; text-decoration: none; color: #007bff; display: inline-block;">
           {{ item.title }}
         </a> - {{ item.date | date: "%B %d, %Y" }}
