--- a/_news/index.html
+++ b/_news/index.html
@@ -10,13 +10,18 @@ permalink: /news/
   <ul style="list-style: none; padding: 0; display: inline-block; text-align: left;">
     {% assign sorted_news = site.news | sort: "date" | reverse %}
     {% for item in sorted_news %}
-      <li style="margin-bottom: 20px; display: flex; align-items: center;">
-        {% if item.image %}
-          <img src="{{ item.image | relative_url }}" alt="{{ item.title }}" style="width: 80px; height: auto; margin-right: 15px; border-radius: 5px;">
-        {% endif %}
-        <a href="{{ item.url }}" style="font-size: 1.2em; text-decoration: none; color: #007bff; display: inline-block;">
-          {{ item.title }}
-        </a> - {{ item.date | date: "%B %d, %Y" }}
+      <li style="margin-bottom: 20px; display: flex; align-items: center; justify-content: space-between;">
+        <div style="display: flex; align-items: center;">
+          {% if item.image %}
+            <img src="{{ item.image | relative_url }}" alt="{{ item.title }}" style="width: 80px; height: auto; margin-right: 15px; border-radius: 5px;">
+          {% endif %}
+          <a href="{{ item.url }}" style="font-size: 1.2em; text-decoration: none; color: #007bff;">
+            {{ item.title }}
+          </a>
+        </div>
+        <span style="font-size: 0.9em; color: #666;">
+          {{ item.date | date: "%B %d, %Y" }}
+        </span>
       </li>
     {% endfor %}
   </ul>
